OSX/iOS: Invalide QTLE services when remote device disconnects

So far, only a local disconnect triggered the invalidation process.

Task-number: QTBUG-50125
Change-Id: I324e01c86eb0c7cc820e91a6f6d6d01fb23170ab
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@theqtcompany.com>